# pulp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mcp.json  .mise.toml  .status-ladder-waivers.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE.md  NOTICE.md  README.md  VISION.md  codecov.yml  compat.json  config.example.toml  mkdocs.yml  pulp.toml  requirements-docs.txt  setup.ps1  setup.sh  validate-build.ps1  validate-build.sh
bindings/nodejs/: CMakeLists.txt  bindings.cpp
bindings/python/: CMakeLists.txt  bindings.cpp
core/audio/: CMakeLists.txt
core/canvas/: CMakeLists.txt
core/dsl/: CMakeLists.txt
core/events/: CMakeLists.txt
core/format/: CMakeLists.txt  host-quirks.json  host-quirks.schema.json
core/graph/: CMakeLists.txt
core/host/: CMakeLists.txt
core/midi/: CMakeLists.txt
core/native-components/: CMakeLists.txt
core/osc/: CMakeLists.txt
core/platform/: CMakeLists.txt
core/render/: CMakeLists.txt
core/runtime/: CMakeLists.txt
core/scene/: CMakeLists.txt
core/signal/: CMakeLists.txt
core/state/: CMakeLists.txt
core/view/: CMakeLists.txt
examples/: CMakeLists.txt
examples/PulpDrums/: CMakeLists.txt  clap_entry.cpp  pulp_drums.hpp  test_pulp_drums.cpp
examples/PulpSampler/: CMakeLists.txt  clap_entry.cpp  pulp_sampler.hpp  sampler_components.hpp  test_pulp_sampler.cpp
examples/PulpSynth/: CMakeLists.txt  clap_entry.cpp  pulp_synth.hpp  test_pulp_synth.cpp
examples/PulpTempoSampler/: CMakeLists.txt  au_register.cpp  au_v2_entry.cpp  clap_entry.cpp  main.cpp  pulp_tempo_sampler.hpp  screenshot.cpp  test_pulp_tempo_sampler.cpp  vst3_entry.cpp
examples/android-synth/: README.md
examples/audio-inspector-demo/: CMakeLists.txt  README.md  audio_inspector_demo_processor.hpp  main.cpp  render_proof_test.cmake  render_proof_wav.cpp
examples/bendr/: CMakeLists.txt  Info.plist.au  README.md  au_v2_entry.cpp  clap_entry.cpp  main.cpp  vst3_entry.cpp
examples/cmajor-gain/: CmajorGain.cmajor  CmajorGain.cmajorpatch  README.md
examples/component-shots/: CMakeLists.txt  main.cpp
examples/ddfx-native-ui/: .gitignore  CMakeLists.txt  NOTE-FOR-DANIEL.md  PORTING-FEEDBACK.md
examples/design-import-standalone/: CMakeLists.txt  main.cpp
examples/design-tool/: CMakeLists.txt  design-tool-chat.js  design-tool-core.js  design-tool-export.js  design-tool-palette.js  design-tool-popup.js  design-tool-preview.js  design-tool-toolbar.js  design-tool.js  main.cpp  oklch.js  test-harness.js
examples/elysium-rust-ui-baseline/: CMakeLists.txt  clap_entry.cpp  elysium_ruif_processor.cpp  elysium_ruif_processor.hpp  main.cpp  vst3_entry.cpp
examples/elysium-standalone/: main.cpp
examples/faust-filter/: CMakeLists.txt  faust_filter.hpp  filter.dsp  generated_filter.hpp  test_faust_filter.cpp
examples/faust-gain/: CMakeLists.txt  faust_gain.hpp  gain.dsp  generated_gain.hpp  test_faust_gain.cpp
examples/faust-tremolo/: CMakeLists.txt  faust_tremolo.hpp  generated_tremolo.hpp  test_faust_tremolo.cpp  tremolo.dsp
examples/gpu-demo/: CMakeLists.txt  main.cpp
examples/host-bench-plugin/: CMakeLists.txt  Info.plist.au  au_v2_entry.cpp  test_host_bench.cpp
examples/hot-reload-demo/: CMakeLists.txt  README.md  clap_entry.cpp  hot_reload_shell.hpp  logic_tremolo.cpp  main.cpp  rebuild_logic.sh  vst3_entry.cpp
examples/hot-reload-morph/: CMakeLists.txt  README.md  capture_morph.cpp  logic_morph.cpp  main.cpp  morph.sh  morph_shell.hpp  run_capture_test.cmake
examples/ink-signal-sampler/: CMakeLists.txt  main.cpp
examples/ink-signal-showcase/: CMakeLists.txt  main.cpp
examples/ios-auv3-chainer/: CMakeLists.txt
examples/ios-auv3-gpu-smoke/: CMakeLists.txt
examples/ios-auv3-jsc-threejs/: CMakeLists.txt
examples/ios-auv3-synth/: CMakeLists.txt  README.md
examples/jsfx-delay/: PulpJsfxDelay.jsfx  README.md
examples/jsfx-gain/: PulpJsfxGain.jsfx  README.md
examples/jsfx-tremolo/: PulpJsfxTremolo.jsfx  README.md
examples/knob-playground/: .gitignore  CMakeLists.txt  index.html  main.cpp
examples/moonbase-activation/: CMakeLists.txt  README.md  au_v2_entry.cpp  capture_screens.cpp  clap_entry.cpp  main.cpp  moonbase_activation_controller.hpp  moonbase_activation_plugin.hpp  moonbase_activation_view.hpp  moonbase_pulp_transport.hpp  platform_open_url.hpp  test_moonbase_activation.cpp  vst3_entry.cpp
examples/mpe-synth/: CMakeLists.txt  clap_entry.cpp  pulp_mpe_synth.hpp  test_pulp_mpe_synth.cpp
examples/native-ui-phase-f-preview/: CMakeLists.txt  au_v3_entry.cpp  chainer_native_ui_processor.cpp  chainer_native_ui_processor.hpp  clap_entry.cpp  main.cpp  moduleinfo.json  vst3_entry.cpp
examples/offline-stretch/: CMakeLists.txt  INTEGRATION.md  PHASE3-DISPOSITION.md  QUALITY-REFINEMENT-NOTES.md  RATIO-AND-ROUTING.md  baseline-phase1.json  stretchcli.cpp
examples/plugin-host-demo/: CMakeLists.txt  main.cpp
examples/pulp-compressor/: CMakeLists.txt  au_v2_entry.cpp  clap_entry.cpp  pulp_compressor.hpp  test_pulp_compressor.cpp  vst3_entry.cpp
inspect/: CMakeLists.txt  INSPECT_MODULE_MAP.md
ship/: CMakeLists.txt
test/: CMakeLists.txt  canvas_pixel_probe.hpp  loopback_probe.hpp  mac_window_harness.hpp  mac_window_harness.mm  preset_test_sandbox.hpp  test_aax_midi.cpp  test_aax_midi_node.cpp  test_aax_model.cpp  test_ab_compare.cpp  test_abstract_fifo.cpp  test_accessibility_audit.cpp  test_accessibility_provider.cpp  test_accessibility_tree.cpp  test_adsr.cpp  test_analytics.cpp  test_analyzer_provider.cpp  test_android_package.cpp  test_animation.cpp  test_animation_3d.cpp  test_animator_set.cpp  test_announce.cpp  test_anticipation_eligibility.cpp  test_anticipation_partition.cpp  test_anticipation_subgraph_render.cpp  test_app_framework.cpp  test_appcast.cpp  test_appearance_tracker.cpp  test_ara.cpp  test_ara_scaffold.cpp  test_ara_types.cpp  test_asset_manager.cpp  test_async_stream.cpp  test_atk_mapping.cpp  test_atspi_mapping.cpp  test_attributed_string.cpp  test_au_plugin_state.mm  test_au_v2_cocoa_ui.mm  test_au_v2_effect.cpp  test_audio.cpp  (+657 more)
(+4290 files in other folders)
